--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 before_install:
+- gem install bundler
 - sudo apt-get update && sudo apt-get install texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra texlive-latex-recommended dvipng
 script:
 - make pdf
